@@ -1,36 +1,43 @@
-<form name="shareForm" #shareForm>
-    <div class="primary-modal-header modal-header">
-        <h4 style="color:#fff" class="modal-title">Share Collection</h4>
-    </div>
-    <div class="modal-body">
-        <flash-messages></flash-messages>
-        <!--div class="alert alert-danger" modal-error ng-hide="flash===undefined || flash===''">{{flash}}</div-->
-        Enter the recepient's email address:
-        <input type="email" class="form-control" name="sharingDataEmail" placeholder="Add the recepient's email address.." style="margin-top:10px" [(ngModel)]="sharingData.to" [required]="true">
-        <br/>
+<div class="share-collection-modal">
+  <h2 mat-dialog-title>{{'Collections.Share Collection'|translate}}:
+    "{{data.collectionName}}"</h2>
+  <form [formGroup]="shareForm">
+    <mat-dialog-content>
+      <flash-messages></flash-messages>
+      <mat-form-field appearance="outline">
+        <mat-label>{{'Collections.Recipient\'s e-mail'|translate}}</mat-label>
+        <input matInput [(ngModel)]="sharingData.to" formControlName="email" email required>
+        <mat-error *ngIf="shareForm.controls.email.hasError('required')">
+          {{'validations.required'|translate}}
+        </mat-error>
+        <mat-error *ngIf="shareForm.controls.email.hasError('email')">
+          {{'Collections.Please enter a valid e-mail address'|translate}}
+        </mat-error>
+      </mat-form-field>
+      <div class="invitations">
         <div *ngIf="invitations.length>0">
-            Invitations have also been sent to:<br/><br/>
-            <ul class="list-group" slimscroll scroll-height="60">
-                <li class="list-group-item clearfix" *ngFor="let invitation of invitations">
-                    <div class="row">
-                        <div class="col-sm-8">{{invitation.to}}</div>
-                        <div class="col-sm-4" style="text-align: right;">
-                            <span *ngIf="invitation.confirmed==1" class="label label-success">Accepted</span>
-                            <span *ngIf="invitation.confirmed!=1" class="label label-warning">Pending</span>
-                            <i class="fa fa-close" (click)="remove(invitation.collection_id, invitation.id)" style="padding: 0px 15px 0 35px;"></i>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+          {{'Collections.Invitations have also been sent to'|translate}}:<br /><br />
+          <mat-list>
+            <mat-list-item *ngFor="let invitation of invitations">
+              {{invitation.to}}<div fxFlex></div>
+              <mat-chip-list>
+                <mat-chip *ngIf="invitation.confirmed==1">{{'Collections.Accepted'|translate}}</mat-chip>
+                <mat-chip *ngIf="invitation.confirmed!=1">{{'Collections.Pending'|translate}}</mat-chip>
+              </mat-chip-list>
+              <button mat-icon-button (click)="remove(invitation.collection_id, invitation.id)"
+                [matTooltip]="'Collections.Revoke Invitation'|translate">
+                <mat-icon>clear</mat-icon>
+              </button>
+            </mat-list-item>
+          </mat-list>
         </div>
-    </div>
-    <div class="modal-footer">
-        <button type="button" (click)="share()" class="btn btn-default">Send Invitation</button>
-        <button type="button" class="btn btn-default" (click)="cancel()">Done</button>
-    </div>
-    </form>
-    
-    
-    
-    
-    
+      </div>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+      <button type="submit" mat-raised-button color="primary" [disabled]="shareForm.invalid"
+        (click)="share()">{{'Collections.Send Invitation'|translate}}</button>
+      <button type="button" mat-raised-button mat-dialog-close
+        (click)="cancel()">{{'Collections.Close'|translate}}</button>
+    </mat-dialog-actions>
+  </form>
+</div>
