@@ -6,10 +6,34 @@
         <mat-card-header class="sidebar-header">
           <mat-card-title>{{'Collections.MyCollections'|translate}} ({{dataForTheTree.length}})</mat-card-title>
           <div fxFlex></div>
-          <button mat-icon-button color="primary" [routerLink]="['/app/collections/add']" [matTooltip]="'Collections.AddNewCollection'|translate"><mat-icon>add_circle_outline</mat-icon></button>
-	  <button mat-icon-button color="primary" (click)="importDocuments()" [matTooltip]="'Collections.Import'|translate"><mat-icon>cloud_upload</mat-icon></button>
+          <button mat-icon-button color="primary" [routerLink]="['/app/collections/add']"
+            [matTooltip]="'Collections.AddNewCollection'|translate">
+            <mat-icon>create_new_folder</mat-icon>
+          </button>
+          <button mat-icon-button color="primary" (click)="importDocuments()"
+            [matTooltip]="'Collections.Import'|translate">
+            <mat-icon>cloud_upload</mat-icon>
+          </button>
+	  <!--<button mat-icon-button color="primary" (click)="importDocuments()"
+            [matTooltip]="'Collections.DeleteSelectedCollection'|translate">
+            <mat-icon>delete_forever</mat-icon>
+	  </button>-->
         </mat-card-header>
         <mat-card-content class="sidebar-main-content">
+          <mat-selection-list #shoes [multiple]="false">
+            <mat-list-option *ngFor="let collection of dataForTheTree;let index=index" [value]="collection">
+              <div class="center-vertically">
+                <mat-icon>folder</mat-icon> {{collection.name}} <div fxFlex></div>
+		<mat-icon *ngIf="collection.confirmed==1 && collection.is_owner">folder_shared</mat-icon>
+		<mat-icon *ngIf="!(collection.confirmed==1 && collection.is_owner)"><!--toggle_off--></mat-icon>
+		<mat-icon *ngIf="collection.confirmed==1 && !collection.is_owner">folder_shared</mat-icon>
+		<mat-icon *ngIf="!(collection.confirmed==1 && !collection.is_owner)"><!--toggle_off--></mat-icon>
+                <button mat-icon-button (click)="deleteCollection(selectedCollection.id)"
+                  *ngIf="collection.is_owner" [matTooltip]="'Collections.Delete Collection'|translate">
+                  <mat-icon>delete_forever</mat-icon></button>
+              </div>
+            </mat-list-option>
+          </mat-selection-list>
           <mat-action-list>
             <button mat-list-item class="cursor" *ngFor="let collection of dataForTheTree;let index=index"
               (click)="showSelectedCollection(collection, index)"
@@ -31,31 +55,41 @@
         <mat-card-header *ngIf="showStaticHeader==true">
           <mat-card-title>Manage Collections</mat-card-title>
           <div fxFlex></div>
-          <button mat-stroked-button color="primary" (click)="importDocuments()"><mat-icon>cloud_upload</mat-icon> Import</button>
+          <button mat-stroked-button color="primary" (click)="importDocuments()">
+            <mat-icon>cloud_upload</mat-icon> Import
+          </button>
         </mat-card-header>
         <!--download="{{selectedCollection.name}}_export.json"-->
-        <div *ngIf="showStaticHeader!=true">
+        <mat-card-header *ngIf="showStaticHeader!=true">
           <mat-card-title>Collection: <i>{{selectedCollection.name}}</i></mat-card-title>
+          <div fxFlex></div>
+
           <mat-card-actions align="end" *ngIf="btnShow">
             <button type="button" class="btn btn-xs btn-success" (click)="addDocuments()"
-              *ngIf="selectedCollection.is_owner"><i class="fa fa-plus"></i> Add</button>
+              *ngIf="selectedCollection.is_owner">
+              <mat-icon>add_circle_outline</mat-icon> Add
+            </button>
             <button type="button" class="btn btn-xs btn-primary" (click)="shareCollection()"
-              *ngIf="selectedCollection.is_owner"><i class="fa fa-user-plus"></i> Share</button>
+              *ngIf="selectedCollection.is_owner">
+              <mat-icon>folder_shared</mat-icon> Share
+            </button>
             <a [href]="'./api/collections/'+selectedCollection.id+'/export'" target="_blank"
-              class="btn btn-xs btn-primary"><i class="fa fa-download"></i> Export</a>
-	    <button mat-stroked-button color="primary" (click)="importDocuments()"><i class="fa fa-upload"
-                aria-hidden="true"></i> Import</button>
+              class="btn btn-xs btn-primary">
+              <mat-icon>cloud_download</mat-icon> Export
+            </a>
             <button type="button" class="btn btn-xs btn-primary" (click)="renameCollection()"
               *ngIf="selectedCollection.is_owner"><i class="fa fa-pencil-square-o"></i>
               Rename</button>
             <button type="button" class="btn btn-xs btn-danger" (click)="deleteCollection(selectedCollection.id)"
-              *ngIf="selectedCollection.is_owner"><i class="fa fa-trash-o fa-lg"></i> Delete Collection</button>
+              *ngIf="selectedCollection.is_owner">
+              <mat-icon>delete_forever</mat-icon> Delete Collection
+            </button>
           </mat-card-actions>
           <mat-card-actions align="end" *ngIf="!btnShow">
             <button type="button" class="btn btn-xs btn-danger" (click)="deleteDocuments()"><i
                 class="fa fa-trash-o fa-lg"></i> Delete Document(s)</button>
           </mat-card-actions>
-        </div>
+        </mat-card-header>
         <mat-card-content class="main-content">
           <div class="text-center no-available-documents" *ngIf="collectionDocuments.length==0">
             <i class="fa fa-tasks" aria-hidden="true"></i>
