@@ -84,21 +84,31 @@
     "Help": "Help"
   },
   "Collections": {
-     "MyCollections": "My Collections",
-     "AddNewCollection": "Add New Collection",
-     "AddCollection": "Add Collection",
-     "ManageCollections": "Manage Collections",
-     "CollectionName": "Collection Name",
-     "SharedByMe": "Shared By Me",
-     "SharedWithMe": "Shared With Me",
-     "Documents": "Documents",
-     "DefaultEncoding": "Default Encoding",
-     "DefaultHandler": "Default Handler",
-     "NameIsRequired.": "Name is required.",
-     "NameMustBeAtLeast4CharactersLlong.": "Name must be at least 4 characters long.",
-     "FilesToBeAddedToTheCollection": "Files to be added to the Collection",
-     "PleaseEnterTheNameOfTheCollection...": "Please enter the name of the collection...",
-     "Import": "Import"
+    "MyCollections": "My Collections",
+    "AddNewCollection": "Add New Collection",
+    "AddCollection": "Add Collection",
+    "ManageCollections": "Manage Collections",
+    "CollectionName": "Collection Name",
+    "SharedByMe": "Shared By Me",
+    "SharedWithMe": "Shared With Me",
+    "Documents": "Documents",
+    "DefaultEncoding": "Default Encoding",
+    "DefaultHandler": "Default Handler",
+    "NameIsRequired.": "Name is required.",
+    "NameMustBeAtLeast4CharactersLlong.": "Name must be at least 4 characters long.",
+    "FilesToBeAddedToTheCollection": "Files to be added to the Collection",
+    "PleaseEnterTheNameOfTheCollection...": "Please enter the name of the collection...",
+    "Recipient's e-mail": "Recipient's e-mail",
+    "Share Collection": "Share Collection",
+    "Please enter a valid e-mail address": "Please enter a valid e-mail address",
+    "Invitations have also been sent to": "Invitations have also been sent to",
+    "Import": "Import",
+    "Accepted": "Accepted",
+    "Pending": "Pending",
+    "Send Invitation": "Send Invitation",
+    "Close": "Close",
+    "Revoke Invitation": "Revoke Invitation",
+    "Delete Collection": "Delete Collection"
   },
   "validations": {
     "required": "This field is required",
