@@ -1,3 +1,11 @@
+24 July 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/dialogs/share-collection-modal/share-collection-modal.component.html:
+ * clarin-angular/src/app/components/dialogs/share-collection-modal/share-collection-modal.component.ts:
+ * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
+ * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
+ * clarin-angular/src/assets/i18n/en-US.json:
+ * clarin-angular/src/css/clarin-material.scss: Fixed Collection sharing.
+
 23 July 2021 Petasis George <petasis@iit.demokritos.gr>:
  * clarin-angular/src/app/components/dialogs/select-document-modal/select-document-modal.component.html:
  * clarin-angular/src/css/clarin-material.scss: Added Cancel button on
